--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,56 +1,3 @@
-/* .popup .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background:rgba(0,0,0,0.7);
-    z-index: 1;
-    display: none;
-}
-
-.popup .content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    background: var(--white);
-    border-radius: 1rem 1rem;
-
-    width: 28rem;
-    height: 220px;
-    z-index: 2;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.popup .close-btn {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-    width: 30px;
-    height: 30px;
-    background: var(--black);
-    color: var(--white);
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 50%;
-}
-
-.popup.active .overlay {
-    display: block;
-}
-
-.popup.active .content {
-    transition: all 100ms ease-in-out;
-    transform: translate(-50%, -50%) scale(1);
-}
-
-*/
-
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -75,14 +22,13 @@
     border: 1px solid #888;
     width: 80%;
     border-radius: 1rem 1rem;
-
   }
   
   /* The Close Button */
   .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: var(--fs-2);
     font-weight: bold;
   }
   
@@ -92,3 +38,5 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+  
